--- a/index.html
+++ b/index.html
@@ -14,22 +14,22 @@
         integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./luminarpage.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer"/>
 </head>
 
 <body>
-    <div class="row d2">
-        <div class="col-lg-6">
+    <div class="row d2 ">
+        <div class="col-lg-6 d1 ">
             <span class="mx-5 text-white">Have any question? <a class="a1" href=""> +91 8086 651 651</a>
             </span>
          </div>
-        <div class="col-lg-6  ">
+        <div class="col-lg-6 d1  ">
             <a class="a1 ms-3 " href=""><i class="fa-solid fa-phone"></i> +91 8086 651 651 </a>
             <a class="a1 ms-3" href=""><i class="fa-solid fa-envelope"></i>contact@luminartecnolab.com</a>
         </div>
     </div>
     <!-- first part -->
-    <nav class="navbar navbar-expand-lg bg-body-tertiary md1 sticky-top text-white w-100">
+    <nav class="navbar navbar-expand-lg bg-body-tertiary md1 sticky-top text-white ">
         <div class="container w-100">
             <img class="m1" src="./images/download.jpeg" alt="">
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
